fixed color on mobile

--- a/css/product.scss
+++ b/css/product.scss
@@ -523,6 +523,7 @@ h4 {
 
       h4 {
         margin-bottom: 13px !important;
+        color: #5E5E5E !important;
       }
 
       p {
